--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-
+<!--<section role="banner">-->
+  <!--<img src="images/logo-smaller.jpg" />-->
+<!--</section>-->
 <div class="home">
 
   <h1 class="page-heading">Moterys programuoja!</h1>
